@@ -115,6 +115,7 @@ plugins/paint/templates/plugin.cc
 [type: gettext/glade]plugins/paint/templates/templates.ui
 plugins/paint/templates/templatetool.cc
 [type: gettext/glade]plugins/paint/text/fontsel.ui
+plugins/paint/text/fragmenttool.cc
 plugins/paint/text/plugin.cc
 plugins/paint/wikipedia/plugin.cc
 plugins/paint/wikipedia/wikipediatool.cc
