@@ -1,3 +1,9 @@
+2009-08-12  Jean Brefort  <jean.brefort@normalesup.org>
+
+	reviewed by: <delete if not using a buddy>
+
+	* POTFILES.in:
+
 ##Text encoding: utf-8
 
 2009-06-07  Jean Bréfort  <jean.brefort@normalesup.org>
